# cgsc

./: .gitignore  CMakeLists.txt  README.md
analysis/data_desc/: Analysis.ipynb  README.md
analysis/experiment/: README.md
analysis/results/: README.md
benchmark/: CMakeLists.txt
fsrc/: main.cpp
script/experiment/: analysis_result.py  expt_auto.py  process_data.py
script/illustration/: plot_result.py
script/visualize/: plot.py  scenes_dist.py
scripts/: aoi_generator.py  bnb_visual.py  count_scenes.py  debug.py  experiment_auto.py  expt.py  gen_poly.py  number_of_cells.py  plot_summary.py  process_data.py  run.py  scenes_dist.py  show_last_expt_result.py  visualize.py
scripts/experiment/: aoi_generator.py  expt_auto.py
scripts/expt/: expt_auto.py
scripts/online_plotter/: server.py
scripts/utils/: expt_tools.py  gen_aoi.py  gen_poly.py  path.py  plot.py
scripts/visualize/: analysis_result.py  plot.py  polygon.py  test.py
src/: CMakeLists.txt  experiment.cc  experiment.h  expt.cpp  expt_prev.cpp  floats.hpp  geometry.cc  geometry.h  global.cc  global.h  illus.cpp  main.cc  main.cpp  model.cc  model.h  optimizer.cc  optimizer.h  solution.cc  solution.h  solver.cc  solver.h  transformer.cc  transformer.h
src/model/: CMakeLists.txt  aoi.cpp  cell.cpp  grid.cpp  misc.cpp  polygon.cpp  scene.cpp  utils.cpp
src/solver/: CMakeLists.txt  data.cpp  greedy.cpp  result.cpp  solver.cpp
src/utils/: CMakeLists.txt  data.cpp  result.cpp  timestamp.cpp
src2/: CMakeLists.txt  solution.cc
test/: CMakeLists.txt  misc.hpp  test.cpp  utils.hpp
(+38 files in other folders)
